--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,15 @@ direction: rtl;
 }
 .photo{
 
- background: url(./img/pexels-pixabay-531880.jpg);
+ background: url(./img/pexels-pixabay-531880.jpg) ;
+ background-repeat: no-repeat;
 height: 120vh;
 }
-
+.card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
 
 }
